examples/negative/modules/kind_type_redeclared.kai
# Negative fixture: `Type` is a builtin kind (declared in the language's
# kind catalog over the builtin `HindleyMilner` theory). User code cannot
# redeclare it — the kind system is closed over the builtin kinds.

kind Type : HindleyMilner with type

fn main() : Int = 0
